Remove Java Security Manager / Special Permissions #197